ITS ALIVE! MOUHAHAHAHAHAHA

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Created by https://www.gitignore.io
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -14,6 +16,7 @@ develop-eggs/
 dist/
 downloads/
 eggs/
+.eggs/
 lib/
 lib64/
 parts/
@@ -37,6 +40,7 @@ pip-delete-this-directory.txt
 htmlcov/
 .tox/
 .coverage
+.coverage.*
 .cache
 nosetests.xml
 coverage.xml
@@ -54,4 +58,12 @@ docs/_build/
 # PyBuilder
 target/
 
+
+### Vim ###
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
 
